Fix 'more options' button alignment, and spacing in multiview header

--- a/client/src/style/scss/history.scss
+++ b/client/src/style/scss/history.scss
@@ -467,6 +467,7 @@
             @extend .btn-sm;
         }
         .open-more-options {
+            margin-top: 4px;
             padding: 2px 6px 2px 6px;
             font-size: 100%;
         }
@@ -480,7 +481,7 @@
             margin-right: 8px;
             margin-left: 8px;
             & > * {
-                margin: 0px 4px 4px 0px;
+                margin-left: 8px;
             }
         }
         &.control-column-center {
